--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "input-otp": "^1.4.2",
         "lucide-react": "^0.484.0",
         "marked": "^15.0.7",
+        "modern-screenshot": "^4.6.7",
         "next-themes": "^0.4.6",
         "octokit": "^4.1.2",
         "react": "^19.0.0",
