--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react": "^19.0.0",
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
+        "react-easy-crop": "^5.0.8",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
